Bugfix: Wrap long lines in code blocks

--- a/theme_default.css
+++ b/theme_default.css
@@ -53,6 +53,8 @@ main:not(.printable) { position: relative; z-index: 1000; padding: 2em 2em 0.5em
 
 blockquote { padding-left: 1em; border-left: 0.2em solid #442772; border-radius: 0.2rem; }
 
+pre { white-space: pre-wrap; }
+
 a { cursor: pointer; }
 a.redlink:link { color: rgb(230, 7, 7); }
 a.redlink:visited { color: rgb(130, 15, 15); /*#8b1a1a*/ }
